# temp

./: .gitignore  Makefile  docker-compose.yaml  pyproject.toml
app/: main.py  routes.py
app/api/users/: controllers.py  deps.py  serializers.py
app/core/: constants.py
app/core/users/: dto.py  models.py  repositories.py  services.py
app/di/: adapters.py  app_dependency_injector.py  repositories.py  services.py
app/infra/: logging.py
app/infra/adapters/: redis_cache.py
app/infra/database/: base.py  db_adapter.py
docker/dragonfly/: Dockerfile  dragonfly-entrypoint.sh
settings/: config.py
settings/environments/: .env.local.runtests  .env.local.template
tests/: utils.py
tests/integration/: conftest.py
tests/integration/factories/: users.py
tests/integration/users/: test_users.py
